--- a/templates/galeria/buscar.html
+++ b/templates/galeria/buscar.html
@@ -25,28 +25,30 @@
                         <ul class="cards__lista">
                             {% if cards %}
                                 {% for fotografia in cards %}
-                                <li class="card">
-                                    <a href="{% url 'imagem' fotografia.id %}">
-                                        {% if fotografia.foto == "" or fotografia.foto == null %}
-                                            <img class="card__imagem" src="{% static '/assets/imagens/galeria/not-found.png' %}" alt="foto">
-                                        {% else %}
-                                            <img class="card__imagem" src="{{ fotografia.foto.url }}" alt="foto">
-                                        {% endif %}
-                                    </a>
-                                    <span class="card__tag">Estrelas</span>
-                                    <div class="card__info">
-                                        <p class="card__titulo">{{ fotografia.nome }}</p>
-                                        <div class="card__texto">
-                                            <p class="card__descricao">{{ fotografia.legenda }}</p>
-                                            <span>
-                                                <img src="{% static '/assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
-                                            </span>
+                                    <li class="card">
+                                        <a href="{% url 'imagem' fotografia.id %}">
+                                            {% if fotografia.foto == "" or fotografia.foto == null %}
+                                                <img class="card__imagem" src="{% static '/assets/imagens/galeria/not-found.png' %}" alt="foto">
+                                            {% else %}
+                                                <img class="card__imagem" src="{{ fotografia.foto.url }}" alt="foto">
+                                            {% endif %}
+                                        </a>
+                                        <span class="card__tag">Estrelas</span>
+                                        <div class="card__info">
+                                            <p class="card__titulo">{{ fotografia.nome }}</p>
+                                            <div class="card__texto">
+                                                <p class="card__descricao">{{ fotografia.legenda }}</p>
+                                                <span>
+                                                    <img src="{% static '/assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
+                                                </span>
+                                            </div>
                                         </div>
-                                    </div>
-                                </li>
+                                    </li>
                                 {% endfor %}
                             {% else %}
-                                <p><strong>Não existem fotografias cadastradas</strong></p>
+                                <div class="imagem__texto">
+                                    <p>Fotografia(s) não encontrada(s)</p>
+                                </div>
                             {% endif %}
                         </ul>
                     </div>
